@@ -1,3 +1,12 @@
+2005-10-27  Bill Wohler  <wohler@newt.com>
+
+	* mh-customize.el (mh-compose-insertion, mh-x-face-file): Checkdoc
+	fixes.
+	
+	* mh-mime.el (mh-mh-to-mime, mh-mml-attach-file) 
+	(mh-mml-secure-message-sign, mh-mml-secure-message-encrypt) 
+	(mh-mml-secure-message-signencrypt): Ditto
+
 2005-10-24  Bill Wohler  <wohler@newt.com>
 
 	* mh-gnus.el: Load mml.el in order to see if
